spacing and styling sound effects fixed

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -52,6 +52,7 @@
 .main {
   width: 100%;
   max-width: 400px;
+  margin-top: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
